# kulchur

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
kulchur/: __init__.py  alexandria.py  falsedmitry.py  insaneasylum.py  pound.py  recruits.py
tests/: test_alx.py  test_bulkloaders.py  test_dmtry.py  test_pnd.py
